// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/ActivityFeed/comment/Comment should correctly render comment 1`] = `
<ForwardRef(ActivityCard)
  className="bcs-Comment"
>
  <Media
    className="bcs-Comment-media"
  >
    <MediaFigure>
      <Component
        user={
          {
            "id": 10,
            "name": "50 Cent",
          }
        }
      />
    </MediaFigure>
    <MediaBody>
      <d
        attachment="top right"
        className="bcs-Comment-deleteConfirmationModal"
        constraints={
          [
            {
              "attachment": "together",
              "to": "scrollParent",
            },
          ]
        }
        renderElement={[Function]}
        renderTarget={[Function]}
        targetAttachment="bottom right"
      />
      <div
        className="bcs-Comment-headline"
      >
        <UserLink
          data-resin-target="activityfeed-profilelink"
          id={10}
          name="50 Cent"
        />
      </div>
      <div
        className="bcs-Comment-timestamp"
      >
        <ActivityTimestamp
          date={1506534041000}
        />
      </div>
      <ActivityStatus />
      <ForwardRef(withFeatureConsumer(ActivityMessage))
        id="123"
        isEdited={false}
        tagged_message="test"
        translationFailed={null}
      />
    </MediaBody>
  </Media>
</ForwardRef(ActivityCard)>
`;

exports[`elements/content-sidebar/ActivityFeed/comment/Comment should correctly render comment when translation is enabled 1`] = `
<ForwardRef(ActivityCard)
  className="bcs-Comment"
>
  <Media
    className="bcs-Comment-media"
  >
    <MediaFigure>
      <Component
        user={
          {
            "id": 10,
            "name": "50 Cent",
          }
        }
      />
    </MediaFigure>
    <MediaBody>
      <div
        className="bcs-Comment-headline"
      >
        <UserLink
          data-resin-target="activityfeed-profilelink"
          id={10}
          name="50 Cent"
        />
      </div>
      <div
        className="bcs-Comment-timestamp"
      >
        <ActivityTimestamp
          date={1506534041000}
        />
      </div>
      <ActivityStatus />
      <ForwardRef(withFeatureConsumer(ActivityMessage))
        id="123"
        isEdited={false}
        onTranslate={[MockFunction]}
        tagged_message="test"
        translationEnabled={true}
        translationFailed={null}
      />
    </MediaBody>
  </Media>
</ForwardRef(ActivityCard)>
`;

exports[`elements/content-sidebar/ActivityFeed/comment/Comment should render an error when one is defined 1`] = `
<ForwardRef(ActivityCard)
  className="bcs-Comment"
>
  <Media
    className="bcs-Comment-media bcs-is-pending"
  >
    <MediaFigure>
      <Component
        user={
          {
            "id": 10,
            "name": "50 Cent",
          }
        }
      />
    </MediaFigure>
    <MediaBody>
      <div
        className="bcs-Comment-headline"
      >
        <UserLink
          data-resin-target="activityfeed-profilelink"
          id={10}
          name="50 Cent"
        />
      </div>
      <div
        className="bcs-Comment-timestamp"
      >
        <ActivityTimestamp
          date={1506534041000}
        />
      </div>
      <ActivityStatus />
      <ForwardRef(withFeatureConsumer(ActivityMessage))
        id="123"
        isEdited={false}
        tagged_message="test"
        translationFailed={true}
      />
    </MediaBody>
  </Media>
  <ActivityError
    message="errorrrrr"
    title="error"
  />
</ForwardRef(ActivityCard)>
`;

exports[`elements/content-sidebar/ActivityFeed/comment/Comment should render commenter as a link 1`] = `
<ForwardRef(ActivityCard)
  className="bcs-Comment"
>
  <Media
    className="bcs-Comment-media"
  >
    <MediaFigure>
      <Component
        user={
          {
            "id": 10,
            "name": "50 Cent",
          }
        }
      />
    </MediaFigure>
    <MediaBody>
      <div
        className="bcs-Comment-headline"
      >
        <UserLink
          data-resin-target="activityfeed-profilelink"
          id={10}
          name="50 Cent"
        />
      </div>
      <div
        className="bcs-Comment-timestamp"
      >
        <ActivityTimestamp
          date={1506534041000}
        />
      </div>
      <ActivityStatus />
      <ForwardRef(withFeatureConsumer(ActivityMessage))
        id="123"
        isEdited={false}
        tagged_message="test"
        translationFailed={null}
      />
    </MediaBody>
  </Media>
</ForwardRef(ActivityCard)>
`;
